--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Iphone</title>
 </head>
 <body>
+    <header class="header">
+        <div class="container header__inner">
+            <ul class="header__list">
+                <li class="header__item"><a href="#" class="header__link">What's new</a></li>
+                <li class="header__item"><a href="#" class="header__link">Color</a></li>
+                <li class="header__item"><a href="#" class="header__link">Order</a></li>
+            </ul>
+            <div class="header__logo">
+                <img src="images/header/logo.svg" alt="">
+            </div>
+            <div class="header__phone">+38 050-456-56-56</div>
+        </div>
+    </header>
 
   
     <script href="./js/main.js"></script>
