create range block

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             <div class="header__phone">+38 050-456-56-56</div>
         </div>
     </header>
+    <section class="range">
+        <div class="container">
+            <h1 class="range__title">IPHONE 14 PRO</h1>
+            <div class="range__img">
+                <img src="images/range/range-img.jpg" alt="">
+            </div>
+            <div class="range__button">
+                <a href="#" class="range__link">CHOOSE</a>
+            </div>
+        </div>
+    </section>
 
   
     <script href="./js/main.js"></script>
