--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
             </div>
         </div>
     </section>
+    <section class="novelties">
+        <div class="container">
+            <h3 class="novelties__title title">WHAT'S NEW</h3>
+            <div class="novelties__body">
+                <div class="novelties__content">
+                    <p class="novelties__text">All models are equipped with A16 Bionic single-chip system, 48-megapixel main camera and ProMotion screens with Ceramic Shield protection and a frequency range of 1 - 120 Hz, as well as accelerated LPDDR5 memory. The design of the line has been updated, there are two cutouts on the front panel of smartphones. </p>
+                    <p class="novelties__text">All iPhone 14s in the US will be sold without a SIM tray: the manufacturer says that improved eSIM technology will allow you to transfer old electronic SIM cards to new smartphones.</p>
+                    <p class="novelties__text">The front camera has been updated (it is equipped with autofocus and recognizes the user faster in low light conditions) and the sensor of the main camera.</p>
+                    <p class="novelties__text novelties__text--bold">The iPhone 14 Pro came out in a new design - without the branded “bangs”. A new color has also been added to the range. The smartphone, unlike the "regular" 14 iPhones, has an A16 Bionic processor, which can perform 4 trillion photo operations per second.</p> 
+                  </div> 
+                  <div class="novelties__img">
+                      <img src="images/novelties/novelties-img.jpg" alt=""> 
+                  </div>
+            </div>
+        </div>
+    </section>
 
   
     <script href="./js/main.js"></script>
