create  colors  block

--- a/index.html
+++ b/index.html
@@ -48,6 +48,41 @@
             </div>
         </div>
     </section>
+    <section class="colors">
+        <div class="container">
+            <h3 class="colors__title title">CHOOSE YOUR COLOR</h3>
+            <div class="colors__items">
+                <div class="colors__item">
+                    <div class="colors__img">
+                        <img src="images/colors/color-1.jpg" alt="image">
+                    </div>
+                    <div class="colors__item__title">Silver</div>
+                    <p class="colors__desc">Silver</p>
+                </div>
+                <div class="colors__item">
+                    <div class="colors__img">
+                        <img src="images/colors/color-2.jpg" alt="image">
+                    </div>
+                    <div class="colors__item__title">Deep purple</div>
+                    <p class="colors__desc">Dark purple</p>
+                </div>
+                <div class="colors__item">
+                    <div class="colors__img">
+                        <img src="images/colors/color-3.jpg" alt="image">
+                    </div>
+                    <div class="colors__item__title">Gold</div>
+                    <p class="colors__desc">Gold</p>
+                </div>
+                <div class="colors__item">
+                    <div class="colors__img">
+                        <img src="images/colors/color-4.jpg" alt="image">
+                    </div>
+                    <div class="colors__item__title">Space Black</div>
+                    <p class="colors__desc">Space black</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
   
     <script href="./js/main.js"></script>
