create  form  bock

--- a/index.html
+++ b/index.html
@@ -83,6 +83,26 @@
             </div>
         </div>
     </section>
+    <section class="form">
+        <div class="container">
+            <div class="form__body">
+                <div class="form__content">
+                    <h2 class="form__title">DO YOU WANT IPHONE 14 PRO?</h2>
+                    <div class="form__inputs">
+                        <input class="form__input" type="text" placeholder="Your name">
+                        <div class="form__line"></div>
+                        <input class="form__input" type="text" placeholder="Phone number">
+                        <div class="form__line"></div>
+                    </div>
+                    <p class="form__text">In the near future, our manager will contact you</p>
+                    <button class="form__button"><span>ORDER</span></button>
+                </div>
+                <div class="form__image">
+                    <img src="images/form/form-img.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
   
     <script href="./js/main.js"></script>
