--- a/index.html
+++ b/index.html
@@ -103,8 +103,13 @@
             </div>
         </div>
     </section>
-
-  
+    <footer class="footer">
+        <div class="container footer__inner">
+            <h3 class="footer__text">Privacy Policy</h3>
+            <div class="footer__logo"><img src="images/header/logo.svg" alt=""></div>
+            <div class="footer__phone"><span>+38 050-456-56-56</span></div>
+        </div>
+    </footer>
     <script href="./js/main.js"></script>
 </body>
 </html>
