header  mobile  adaptations

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header__phone">+38 050-456-56-56</div>
         </div>
     </header>
-    <section class="range">
+    <!-- <section class="range">
         <div class="container">
             <h1 class="range__title">IPHONE 14 PRO</h1>
             <div class="range__img">
@@ -109,7 +109,7 @@
             <div class="footer__logo"><img src="images/header/logo.svg" alt=""></div>
             <div class="footer__phone"><span>+38 050-456-56-56</span></div>
         </div>
-    </footer>
+    </footer> -->
     <script href="./js/main.js"></script>
 </body>
 </html>
