range mobile adaptations

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header__phone">+38 050-456-56-56</div>
         </div>
     </header>
-    <!-- <section class="range">
+    <section class="range">
         <div class="container">
             <h1 class="range__title">IPHONE 14 PRO</h1>
             <div class="range__img">
@@ -32,6 +32,7 @@
             </div>
         </div>
     </section>
+    <!-- 
     <section class="novelties">
         <div class="container">
             <h3 class="novelties__title title">WHAT'S NEW</h3>
