--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <title>Iphone</title>
@@ -48,7 +50,6 @@
             </div>
         </div>
     </section>
-     <!-- 
     <section class="colors">
         <div class="container">
             <h3 class="colors__title title">CHOOSE YOUR COLOR</h3>
@@ -104,13 +105,14 @@
             </div>
         </div>
     </section>
+    
     <footer class="footer">
         <div class="container footer__inner">
             <h3 class="footer__text">Privacy Policy</h3>
             <div class="footer__logo"><img src="images/header/logo.svg" alt=""></div>
             <div class="footer__phone"><span>+38 050-456-56-56</span></div>
         </div>
-    </footer> -->
+    </footer>
     <script href="./js/main.js"></script>
 </body>
 </html>
